--- a/casette.html
+++ b/casette.html
@@ -1,5 +1,3 @@
-{% load static %}
-
 
 <!DOCTYPE html>
 <html lang="en">
@@ -68,24 +66,31 @@
         <div class="image-container">
             <img src="./images/istockphoto-1201445938-612x612.jpg" alt="">
         </div>
-        <h2 class="sectionheading">Stylets</h2>
+       
+
+        <h2 class="sectionheading">CASETTE RINGS / DISPENSOR</h2>
         <div class="productdes">
             <!-- <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae commodi maxime eligendi ipsa quod placeat laudantium? Tenetur placeat ea suscipit labore perferendis deleniti, rerum necessitatibus quis officiis, harum atque modi.</p> -->
             <ul>
                 <li>
-                    Typically made from SS 304 SLT wires for supporting
-                    Guide wire lumen in PTCA and SDS Catheters
+                    Manufactured using Medical Grade PE with
+                    uniform and smooth ID.
                 </li>
                 <li>
-                    Straight with atraumatic edges
+                    Assembled in Class 8 clean rooms.
                 </li>
                 <li>
-                    Supplied as per Client Requirements
+                    Low Bioburden for better packaging
+                    conditions.
+                </li>
+                <li>
+                    Supplied in subpack of 50 in double
+                    package
                 </li>
             </ul>
         </div>
 
-      
+
 
     </section>
 
