--- a/mandrels.html
+++ b/mandrels.html
@@ -1,6 +1,3 @@
-{% load static %}
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -68,25 +65,66 @@
         <div class="image-container">
             <img src="./images/istockphoto-1201445938-612x612.jpg" alt="">
         </div>
-        <h2 class="sectionheading">Stylets</h2>
+
+
+        <h2 class="sectionheading">MANDRELS</h2>
         <div class="productdes">
             <!-- <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae commodi maxime eligendi ipsa quod placeat laudantium? Tenetur placeat ea suscipit labore perferendis deleniti, rerum necessitatibus quis officiis, harum atque modi.</p> -->
             <ul>
                 <li>
-                    Typically made from SS 304 SLT wires for supporting
-                    Guide wire lumen in PTCA and SDS Catheters
+                    Parylene Coated ranging from 3-6 microns
+                    either round or D mandril.
                 </li>
                 <li>
-                    Straight with atraumatic edges
+                    Applications include processing aid in
+                    laser welding and hot air bonding
                 </li>
                 <li>
-                    Supplied as per Client Requirements
+                    Supplied as per customer design/length
                 </li>
             </ul>
+
+
+            <div class="additional-details">
+                <table>
+                    <tr>
+                        <td>OD</td>
+                        <td> : </td>
+                        <td>0.38mm - 0.08mm</td>
+                    </tr>
+                    <tr>
+                        <td>Allow</td>
+                        <td> : </td>
+                        <td>304</td>
+                    </tr>
+                    <tr>
+                        <td>Product Type</td>
+                        <td> : </td>
+                        <td>Wire</td>
+                    </tr>
+                    <tr>
+                        <td>Material</td>
+                        <td> : </td>
+                        <td>SS 304 or SS 304 V</td>
+                    </tr>
+                    <tr>
+                        <td>Surface</td>
+                        <td> : </td>
+                        <td>Parylene Coated</td>
+                    </tr>
+                    <tr>
+                        <td>OD Tolerance</td>
+                        <td> : </td>
+                        <td>+/- 0.005</td>
+                    </tr>
+                    <tr>
+                        <td>Length</td>
+                        <td> : </td>
+                        <td>As per Customer Specifications</td>
+                    </tr>
+                </table>
+            </div>
         </div>
-
-      
-
     </section>
 
 
