--- a/hypotubes.html
+++ b/hypotubes.html
@@ -1,5 +1,3 @@
-{% load static %}
-
 
 <!DOCTYPE html>
 <html lang="en">
@@ -68,24 +66,64 @@
         <div class="image-container">
             <img src="./images/istockphoto-1201445938-612x612.jpg" alt="">
         </div>
-        <h2 class="sectionheading">Stylets</h2>
+       
+        <h2 class="sectionheading">Hypotubes</h2>
         <div class="productdes">
             <!-- <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae commodi maxime eligendi ipsa quod placeat laudantium? Tenetur placeat ea suscipit labore perferendis deleniti, rerum necessitatibus quis officiis, harum atque modi.</p> -->
             <ul>
                 <li>
-                    Typically made from SS 304 SLT wires for supporting
-                    Guide wire lumen in PTCA and SDS Catheters
+                    Designed for optimal pushabality, trackabality, and torque
                 </li>
                 <li>
-                    Straight with atraumatic edges
+                    Good Kink performance
                 </li>
                 <li>
-                    Supplied as per Client Requirements
+                    Optimal wall thickness for decreased deflection time
                 </li>
             </ul>
-        </div>
 
-      
+
+            <div class="additional-details">
+                <table>
+                    <tr>
+                        <td>OD</td>
+                        <td> : </td>
+                        <td>0.66 mm</td>
+                    </tr>
+                    <tr>
+                        <td>ID</td>
+                        <td> : </td>
+                        <td>0.48</td>
+                    </tr>
+                    <tr>
+                        <td>Product Type</td>
+                        <td> : </td>
+                        <td>Ground Wire</td>
+                    </tr>
+                    <tr>
+                        <td>Material</td>
+                        <td> : </td>
+                        <td>SS 304 or SS 304 V</td>
+                    </tr>
+                    <tr>
+                        <td>Surface</td>
+                        <td> : </td>
+                        <td>PTFE Coated/Polished Plain</td>
+                    </tr>
+                    <tr>
+                        <td>OD Tolerance</td>
+                        <td> : </td>
+                        <td>+/- 0.01 mm</td>
+                    </tr>
+                    <tr>
+                        <td>Length</td>
+                        <td> : </td>
+                        <td>As per Customer Requirements</td>
+                    </tr>
+                </table>
+            </div>
+
+        </div>
 
     </section>
 
