--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
         <div class="carousel-container">
             <div class="carousel-inner">
                 <div class="carousel-slide">
-                    <img src="images/alexander-kovacs-SN0mu2M_Va0-unsplash.jpg" alt="Slide 1">
+                    <img src="images/intravenous-injection-hospital.jpg" alt="Slide 1">
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/Architecture.webp" alt="Slide 2">
+                    <img src="images/view-anatomic-heart-model-educational-purpose-with-magnifying-glass.jpg" alt="Slide 2">
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/Commercialbuilding1.webp" alt='Slide 3'>
+                    <img src="images/male-doctor-hands-measuring-tension-patient.jpg" alt='Slide 3'>
                 </div>
             </div>
         </div>
@@ -81,15 +81,19 @@
         <h2 class="sectionheading">About Us</h2>
         <div class="aboutcontentholder">
             <div class="aboutimgholder">
-                <img src="images/Residential.jpg" alt="">
+                <img src="images/doublepulse-logo-01.png" alt="">
             </div>
             <div class="aboutcard">
                 <h3>Double Pulse</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, fuga minus. Optio eaque
-                    doloremque animi soluta consequuntur quae praesentium iste, libero reiciendis pariatur nisi?
-                    Repudiandae labore harum nihil voluptatem minima.</p>
+                <p>Introducing Double Pulse Medical Devices LLP a partnership between 
+                    skilled Engineers with a vision to support Indian Medical manufacturers 
+                    in their supply chain. Our goal is to reduce reliance on imported wire 
+                    components and provide Just in Time delivery of essential products 
+                    such as Stylets, Mandrills, Cassette Rings, and Hypo Tubes. 
+                    These products are widely used in the Stent manufacturing industry 
+                    and other medical device manufacturing processes.</p>
 
-                <a href=""><button class="cta">Know More</button></a>
+                <a href="./about.html"><button class="cta">Know More</button></a>
             </div>
 
         </div>
@@ -150,9 +154,12 @@
     <section class="cover">
         <div class="coverimgholder">
             <div class="covercontent">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium sunt impedit iusto repellat
-                    recusandae officiis, non dolorum assumenda adipisci provident laudantium expedita aperiam libero.
-                    Veritatis deleniti magni error perferendis sit?</p>
+                <p>At Double Pulse, we strive to be your reliable partner in the supply chain,
+                    ensuring timely delivery of high-quality products that meet your
+                    specific requirements. With our expertise and focus on innovation,
+                    we aim to strengthen the Indian Medical industry by providing essential
+                    components that are locally manufactured, reliable, and of the
+                    highest quality.</p>
             </div>
             <div class="buttonholder">
                 <a href=""><button class="cta">Call Us</button></a>
