some major updates

--- a/mandrels.html
+++ b/mandrels.html
@@ -62,15 +62,15 @@
     </section>
 
     <section class="productdesc">
-        <div class="image-container">
+        <!-- <div class="image-container">
             <img src="./images/istockphoto-1201445938-612x612.jpg" alt="">
-        </div>
+        </div> -->
 
 
         <h3 class="sectionheading">MANDRELS</h3>
         <div class="productdes">
             <!-- <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae commodi maxime eligendi ipsa quod placeat laudantium? Tenetur placeat ea suscipit labore perferendis deleniti, rerum necessitatibus quis officiis, harum atque modi.</p> -->
-            <ul>
+            <!-- <ul>
                 <li>
                     Parylene Coated ranging from 3-6 microns
                     either round or D mandril.
@@ -82,8 +82,10 @@
                 <li>
                     Supplied as per customer design/length
                 </li>
-            </ul>
-
+            </ul> -->
+            <div class="image-container">
+                <img src="./images/istockphoto-1201445938-612x612.jpg" alt="">
+            </div>
 
             <div class="additional-details">
                 <table>
