--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
 </head>
 
 <body>
-    <section class="homescreen">
+    <section class="homescreen" id="home">
         <div class="carousel-container">
             <div class="carousel-inner">
                 <div class="carousel-slide">
-                    <img src="images/intravenous-injection-hospital.jpg" alt="Slide 1">
+                    <img src="images/heart-design.jpeg" alt="Slide 1">
                 </div>
                 <div class="carousel-slide">
                     <img src="images/view-anatomic-heart-model-educational-purpose-with-magnifying-glass.jpg" alt="Slide 2">
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/male-doctor-hands-measuring-tension-patient.jpg" alt='Slide 3'>
+                    <img src="images/man-heart.jpeg" alt='Slide 3'>
                 </div>
             </div>
         </div>
@@ -68,8 +68,8 @@
                     <li><a href="#about">About Us</a></li>
                     <li><a href="#product">Products</a></li>
                     <li><a href="#sector">Library</a></li>
-                    <li><a href="#testimonial">Testimonials</a></li>
-                    <li><a href="#footer">Contact Us</a></li>
+                    <!-- <li><a href="#testimonial">Testimonials</a></li> -->
+                    <li><a href="#contact">Contact Us</a></li>
                     <li><a class="enquirybutton" href="#footer">Enquiry</a></li>
                 </ul>
             </div>
@@ -77,7 +77,7 @@
         </nav>
     </section>
 
-    <section class="about">
+    <section class="about" id="about">
         <h2 class="sectionheading">About Us</h2>
         <div class="aboutcontentholder">
             <div class="aboutimgholder">
@@ -184,7 +184,7 @@
         <a class="t-next" onclick="changeTestimonial(1)">&#8594;</a>
     </section> -->
 
-    <footer>
+    <footer id="contact">
         <div class="footerlogo">
             <img src="images/doublepulse-logo-01.png" alt="">
         </div>
