--- a/index.html
+++ b/index.html
@@ -84,14 +84,12 @@
                 <img src="images/doublepulse-logo-01.png" alt="">
             </div>
             <div class="aboutcard">
-                <h3>Double Pulse</h3>
-                <p>Introducing Double Pulse Medical Devices LLP a partnership between 
-                    skilled Engineers with a vision to support Indian Medical manufacturers 
-                    in their supply chain. Our goal is to reduce reliance on imported wire 
-                    components and provide Just in Time delivery of essential products 
-                    such as Stylets, Mandrills, Cassette Rings, and Hypo Tubes. 
-                    These products are widely used in the Stent manufacturing industry 
-                    and other medical device manufacturing processes.</p>
+                <h3>About Double Pulse Medical Devices LLP</h3>
+                <p>Welcome to Double Pulse Medical Devices LLP, where innovation meets expertise. Founded by a team of skilled engineers, our partnership is fueled by a shared vision: to empower Indian Medical Manufacturers through superior supply chain solutions. Our mission is rooted in reducing dependence on imported wire components by offering timely delivery of essential products tailored for the medical manufacturing industry.</p>
+                <p>
+                    At Double Pulse, we specialize in the production of critical components such as Stylets, Mandrels, Cassette Rings, and Hypo Tubes, all of which play a pivotal role in the manufacturing processes of Stents and other medical devices. Our commitment to quality is unwavering, as we utilize SS 304 V—a material renowned for its superior strength, elasticity, and straightness—manufactured on cutting-edge automatic lines.
+
+                </p>
 
                 <a href="./about.html"><button class="cta">Know More</button></a>
             </div>
