--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About Us</a></li>
                     <li><a href="#product">Products</a></li>
-                    <li><a href="#sector">Library</a></li>
                     <!-- <li><a href="#testimonial">Testimonials</a></li> -->
                     <li><a href="#contact">Contact Us</a></li>
                     <li><a class="enquirybutton" href="#footer">Enquiry</a></li>
@@ -150,18 +149,61 @@
             <a href="./productsdetail.html"><button class="cta">View More</button></a>
     </section>
     <section class="cover">
+       
         <div class="coverimgholder">
             <div class="covercontent">
-                <p>At Double Pulse, we strive to be your reliable partner in the supply chain,
-                    ensuring timely delivery of high-quality products that meet your
-                    specific requirements. With our expertise and focus on innovation,
-                    we aim to strengthen the Indian Medical industry by providing essential
-                    components that are locally manufactured, reliable, and of the
-                    highest quality.</p>
+                <h1>
+                    We specialize in delivering <br> cutting-edge Equipment
+                </h1>
+                <div class="why-choose-us">
+                    <div class="item">
+                        <img src="./icons/handshake.svg" alt="handshake">
+                        <span>
+                            Reliable and Trustworthy
+                        </span>
+                    </div>
+
+                    <div class="item">
+                        <img src="./icons/technology.svg" alt="handshake">
+                        <span>
+                            Cutting-edge Technology
+                        </span>
+                    </div>
+
+                    <div class="item">
+                        <img src="./icons/documents.svg" alt="handshake">
+                        <span>
+                            Proven Track Records
+                        </span>
+                    </div>
+
+                    <div class="item">
+                        <img src="./icons/savings.svg" alt="handshake">
+                        <span>
+                            Cost Savings
+                        </span>
+                    </div>
+
+                    <div class="item">
+                        <img src="./icons/india.png" alt="handshake">
+                        <span>
+                            Indian Products
+                        </span>
+                    </div>
+                    <div class="item">
+                        <img src="./icons/customizable.svg" alt="handshake">
+                        <span>
+                            Customizable Solutions
+                        </span>
+                    </div>
+                </div>
+                <div class="buttonholder">
+                    <a href=""><button class="cta">Call Us</button></a>
+                    <a href=""><button class="cta">Enquiry</button></a>
+                </div>
             </div>
-            <div class="buttonholder">
-                <a href=""><button class="cta">Call Us</button></a>
-                <a href=""><button class="cta">Enquiry</button></a>
+            <div class="img-wrapper">
+                <img src="./images/view-anatomic-heart-model-educational-purpose-with-magnifying-glass.jpg" alt="image">
             </div>
         </div>
     </section>
