--- a/hypotubes.html
+++ b/hypotubes.html
@@ -18,7 +18,7 @@
 
 <body>
     <section class="homescreen">
-        <div class="product-carousel-container">
+        <!-- <div class="product-carousel-container">
             <div class="product-carousel-inner">
                 <div class="product-carousel-slide">
                     <img src="./images/istockphoto-1201445938-612x612.jpg" alt="Slide 1">
@@ -41,7 +41,7 @@
         </div>
 
         <button class="product-carousel-control prev" onclick="prevSlide()">&#8249;</button>
-        <button class="product-carousel-control next" onclick="nextSlide()">&#8250;</button>
+        <button class="product-carousel-control next" onclick="nextSlide()">&#8250;</button> -->
 
 
         <nav>
