--- a/index.html
+++ b/index.html
@@ -237,6 +237,23 @@
             </div>
         </div>
     </section>
+    <section class="facility-section">
+        <div class="gallery-container">
+            <h1 class="sectionheading">Facilities</h1>
+            <div class="gallery">
+               
+                    <img src="./images/istockphoto-1201445938-612x612.jpg" class="gallery-item" srcset="./images/istockphoto-1201445938-612x612.jpg" alt="Image 1" >
+                    <img src="./images/istockphoto-1201445938-612x612.jpg" class="gallery-item" srcset="./images/istockphoto-1201445938-612x612.jpg" alt="Image 1" >
+                    <img src="./images/istockphoto-1201445938-612x612.jpg" class="gallery-item" srcset="./images/istockphoto-1201445938-612x612.jpg" alt="Image 1" >
+                
+            </div>
+            <div class="lightbox" id="lightbox">
+                <span class="close" id="close">&times;</span>
+                <img class="lightbox-content" id="lightbox-content">
+                <div class="caption" id="caption"></div>
+            </div>
+        </div>
+    </section>
     <!-- <section class="testimonials">
         <h2 class="sectionheading">Testimonials</h2>
         <div class="slider-container">
@@ -278,9 +295,9 @@
                     Solution</b></a></p>
     </div>
 
-    <script src="js/carousel.js"></script>
-    <script src="js/nav.js"></script>
     <script src="js/testimonial.js"></script>
+    <script src="js/carousel.js"></script>
+    <!-- <script src="js/nav.js"></script> -->
 </body>
 
 </html>
